--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
     <application
         android:name=".AppClass"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@mipmap/icon"
+        android:label="优宝精灵"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".RegistActivity"
             >
 
             <intent-filter>
@@ -23,7 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".LookAwardActivity"/>
-        <activity android:name=".RegistActivity"/>
+        <activity android:name=".MyAddressActivity"/>
+
         <service android:name="service.LocalService"/>
         <service android:name="service.RemoteService"/>
     </application>
